--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,4 +45,5 @@
     <string name="by">By %s</string>
     <string name="week_with_number">Week %s</string>
     <string name="play_video">Play Video</string>
+    <string name="player_time_separator">:</string>
 </resources>
